# vbox

./: .dir-locals.el  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  mkdocs.yaml
CMake/: etags.cmake
Libraries/: CMakeLists.txt  README.md
Libraries/GameFramework/: CMakeLists.txt
Libraries/GameFramework/Source/: GameFramework.h
Libraries/GameFramework/Source/GameFramework/: Application.cpp  Application.h  Components.cpp  Components.h  Entity.cpp  Entity.h  EntryPoint.h  Scene.cpp  Scene.h
Libraries/Runtime/: CMakeLists.txt
Libraries/Runtime/Source/Core/: Assert.h  Base.h.in  CompilerDetection.h  EventSystem.h  File.cpp  Memory.h  PlatformDetection.h  String.h  StringCommandRunner.cpp  StringCommandRunner.h  TypeName.h  Types.h
Libraries/Runtime/Source/Core/Debug/: Log.cpp  LogSinks.cpp
Libraries/Runtime/Source/Core/IO/: Reader.h  Writer.h
Libraries/Runtime/Source/Core/Resources/: ResourceManager.cpp  ResourceManager.h
Libraries/Runtime/Source/Drivers/OpenGL/: OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Libraries/Runtime/Source/Drivers/SDL3/: InputSDL.cpp  WindowSDL.cpp  WindowSDL.h
Libraries/Runtime/Source/Math/: MatrixTransform.h  Quat.h  TypePtr.h  Vector.h
Libraries/Runtime/Source/Renderer/: Buffer.h  Context.cpp  Context.h  Shader.cpp  Shader.h  VertexArray.h
Libraries/Runtime/Source/WSI/: ActionSystem.cpp  ActionSystem.h  Input.h
Projects/Voxenty/: CMakeLists.txt  action_map.json
Projects/Voxenty/Source/: Main.cpp
Shaders/: SimpleShader.glsl
cmake/: formatting.cmake
docs/: about.md  index.md
docs/quickstart/: creating_an_application.md
runtime/: CMakeLists.txt  action_map.json
runtime/include/Components/: Base.h
runtime/include/Core/: Application.h  Assert.h  Base.h  Base.h.in  EntryPoint.h  EventSystem.h  File.h  StringCommandRunner.h  Types.cpp
runtime/include/Core/Debug/: Log.h  LogSinks.h
runtime/include/Core/Resources/: ResourceManager.h
runtime/include/GUI/: ConsoleWindow.h
runtime/include/Math/: Matrix.h
runtime/include/Renderer/: Buffer.h  Context.h  Shader.h  VertexArray.h
runtime/include/Scene/: Entity.h  Scene.h
runtime/include/Scene/Components/: Base.h
runtime/include/WSI/: ActionSystem.h  Input.h  Window.h
runtime/shaders/: simple_shader.glsl
runtime/source/: config.ini
runtime/source/Core/: Application.cpp  EventSystem.cpp  File.cpp  StringCommandRunner.cpp
runtime/source/Core/Debug/: Log.cpp
runtime/source/Core/Resources/: ResourceManager.cpp
runtime/source/Drivers/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
runtime/source/Drivers/SDL3/: WindowSDL.cpp  WindowSDL.h
runtime/source/GUI/: ConsoleWindow.cpp
runtime/source/Renderer/: Context.cpp  Shader.cpp
runtime/source/Scene/: Scene.cpp
runtime/source/WSI/: ActionSystem.cpp
runtime/tests/: CMakeLists.txt  README.md
runtime/tests/assert_test/: CMakeLists.txt  assert_test.cpp
runtime/tests/string_command_runner/: CMakeLists.txt  string_command_runner_test.cpp
source/: CMakeLists.txt  example.cs  main.cpp
